--- a/SaltaVincula/src/app/tab1/tab1.page.html
+++ b/SaltaVincula/src/app/tab1/tab1.page.html
@@ -66,8 +66,7 @@
           </ion-row>
         </ion-grid>
       </ion-card-content>
-      <ion-button (click)="abrirComentarios(publicacion)" expand="block">
-        <ion-icon slot="start" name="star"></ion-icon>Comentar</ion-button>
+      <ion-button (click)="abrirComentarios(publicacion)" expand="block">Comentar</ion-button>
       
     </ion-card>
   </ion-list>
