--- a/SaltaVincula/src/app/tab2/tab2.page.html
+++ b/SaltaVincula/src/app/tab2/tab2.page.html
@@ -1,11 +1,10 @@
-<!-- <app-header title="Mensajes"></app-header> -->
 <ion-header [translucent]="true">
   <ion-toolbar>
     <div class="app-header">
       <div class="app-header-title"><strong>{{ usuarioPorDefecto }}</strong></div>
     </div>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
+      <ion-back-button [text]="" defaultHref="/"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
