--- a/SaltaVincula/src/app/tab1/tab1.page.scss
+++ b/SaltaVincula/src/app/tab1/tab1.page.scss
@@ -1,5 +1,7 @@
 ion-card{
     padding-bottom: 5px;
+    color:black;
+    box-shadow: 0px 0px 3vw 0.1vw rgb(172, 172, 172);
 }
 ion-card-content{
     padding-bottom: 1px;
@@ -7,8 +9,13 @@ ion-card-content{
 ion-textarea{
     margin-left: 10px;
 }
+ion-list{
+    background-color: rgb(223, 223, 223);
+    
+}
+
 .grid-nuevaPublicacion{
-    background-color: rgb(169, 213, 225);
+    background-color: rgb(223, 223, 223);
     padding: 15px 8px;
 }
 .fotoYnombre{
@@ -23,9 +30,10 @@ ion-textarea{
     margin-right: 10px; 
 }
 #fotoPerfil1 {
-    width: 50px; 
+    width: 60px; 
     height: 50px; 
-    border-radius: 50%;
+    border-radius: 100%;
+    object-fit: cover;
     margin-right: 0px; 
 }
 
