se hicieron cambios

--- a/SaltaVincula/src/app/tab2/tab2.page.html
+++ b/SaltaVincula/src/app/tab2/tab2.page.html
@@ -4,7 +4,7 @@
       <div class="app-header-title"><strong>{{ usuarioPorDefecto }}</strong></div>
     </div>
     <ion-buttons slot="start">
-      <ion-back-button [text]="" defaultHref="/"></ion-back-button>
+      <ion-back-button text="" defaultHref="/" [icon]="'arrow-back-outline'"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
