--- a/SaltaVincula/src/app/tab3/tab3.page.scss
+++ b/SaltaVincula/src/app/tab3/tab3.page.scss
@@ -2,7 +2,7 @@
 ion-content {
     div.body {
         height: 100%;
-        background: rgb(236, 236, 236);
+        background-color: rgb(231, 231, 231);
         div.header2,
         div.header3,
         div.header4,
