--- a/SaltaVincula/src/app/tab3/tab3.page.scss
+++ b/SaltaVincula/src/app/tab3/tab3.page.scss
@@ -1,7 +1,8 @@
 * {margin: 0; padding: 0;}
 ion-content {
+    height: 120vh;
     div.body {
-        height: 100%;
+        height: 120vh;
         background-color: rgb(238, 238, 238);
         div.header2,
         div.header3,
@@ -80,6 +81,7 @@ ion-content {
         }
     
         div.main {
+            height: 40%;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             grid-gap: 0.5vw;
