--- a/SaltaVincula/src/app/componentes/comentarios/comentarios.component.html
+++ b/SaltaVincula/src/app/componentes/comentarios/comentarios.component.html
@@ -7,7 +7,7 @@
   
   <ion-item>
     <ion-input
-      label="Ingresá tu comentario"
+      label="Comentá"
       labelPlacement="stacked"
       type="text"
       placeholder="Tu comentario"
